# Cell

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cell.sln  LICENSE.md  README.md
Cell/: Cell.vcxproj  ProjectLinkTest.cpp  ProjectLinkTest.h
Demo/: Demo.vcxproj  program.cpp  ~AutoRecover.Demo.vcxproj
Math/: Math.vcxproj  Math.vcxproj.filters  math.h  program.cpp
Math/linear_algebra/: matrix.h  operation.h  transformation.h  vector.h
Math/test/: test_common.h  test_matrix.h  test_operations.h  test_transformations.h  test_vector.h
Utility/: Utility.vcxproj
cell/: Cell.vcxproj  Cell.vcxproj.filters  cell.cpp  cell.h
cell/camera/: camera.cpp  camera.h  camera_frustum.cpp  camera_frustum.h  fly_camera.cpp  fly_camera.h  fps_camera.cpp  fps_camera.h
cell/glad/: glad.c  glad.h
cell/lighting/: directional_light.cpp  directional_light.h  point_light.cpp  point_light.h
cell/mesh/: circle.cpp  circle.h  cube.cpp  cube.h  line_strip.cpp  line_strip.h  mesh.cpp  mesh.h  plane.cpp  plane.h  quad.cpp  quad.h  sphere.cpp  sphere.h  torus.cpp  torus.h
cell/renderer/: MaterialLibrary.cpp  MaterialLibrary.h  PBR.cpp  PBR.h  PostProcessor.cpp  PostProcessor.h  command_buffer.cpp  command_buffer.h  gl_cache.cpp  gl_cache.h  pbr_capture.cpp  pbr_capture.h  pbr_environment.cpp  pbr_environment.h  (+5 more)
demo/: Demo.vcxproj  Demo.vcxproj.filters  program.cpp
lib/: glfw3.lib
math/: Math.vcxproj  Math.vcxproj.filters  common.h  math.h  program.cpp
utility/: Utility.vcxproj  Utility.vcxproj.filters  diagnostics.h  floating_point.h  log.h  std_types.h  string_id.h  time.cpp  time.h
(+51 files in other folders)
